added username, login, and logout details. need to clean up

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,22 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+          <% if("req.sessionID" !== "req.sessionID"){ %>
+            <form method="post" action="/login">
+            console.log("is this working")
+            <label for="login" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b>Username</b></label>
+            <input type="text" placeholder= "cant do this anymore" name="login" required>
+            <button type="submit" style="background-color:transparent; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Login</button>
+          </form>
+            <% } else{ %>
+              <form method="post" action="/logout">
+              console.log("help")
+              <label for="logout" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b>Username</b></label>
+              <input type="text" placeholder= "ok" name="logout" required>
+              <button type="submit" style="background-color:transparent; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Logout</button>
+            </form>
+              <% } %>
+          </form>
       </div>
     </div>
   </nav>
