--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,7 +26,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
-            <th scope="col">Short URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -33,7 +35,9 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><%= "href = #" %></td>
+              <td><%= id %></td>
+              <td><a class="nav-item nav-link" href="/urls/<%=id%>">Edit</a></td>
+              <td><form method="POST" action="/urls/9sm5xK/delete"><input type="submit" value="Delete"> </form></td>
             </tr>
           <% } %>
         </tbody>
