--- a/views/login_page.ejs
+++ b/views/login_page.ejs
@@ -15,22 +15,22 @@
       crossorigin="anonymous"
     />
 
-    <title>Register - TinyApp</title>
+    <title>Login - TinyApp</title>
   </head>
 
   <body>
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Registration</h3>
-      <form class="" action="/register" method="POST">
+      <h3>Login</h3>
+      <form class="" action="/login" method="POST">
         <div class="">
-          <label for="email">Please Enter Your Email:<Address></Address></label>
+          <label for="email">Please Enter Your Username:<Address></Address></label>
           <input
             class="form"
             type="email"
             name="email"
-            placeholder="Email Address"
+            placeholder="Username"
             style="width: 300px; margin: 1em"
           />
           <input
@@ -62,3 +62,24 @@
     ></script>
   </body>
 </html>
+
+<!-- <% if(email === ''){ %> -->
+  <!-- <form method="post" action="/login">
+  <label for="login" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b>Username</b></label>
+  <input type="text" placeholder= "Username" name="login" required>
+  <button type="submit" style="background-color:transparent; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Login</button>
+</form>
+  <% } else{ %>
+     <form method="post" action="/logout">
+    <label for="logout" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b>Welcome! <%= email %></b></label>
+    <input type="text" placeholder= "Welcome! <%= email %>" name="logout" required>
+    <button type="submit" style="background-color:transparent; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Logout</button>
+  </form>
+    <% } %> --> 
+
+
+
+
+
+
+
