--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,7 +19,8 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <a class="nav-item nav-link" href="/login">Login</a>
         <a class="nav-item nav-link" href="/register">Registration</a>
-        <% if(email !== ""){ %>
+        <% if(userId){ %>
+        <a class="nav-item nav-link" href="">Welcome, <%= userId %>!</a>
         <form method="post" action="/logout">
           <label for="logout" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b></b></label>
           <button type="submit" style="background-color:transparent; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Logout</button>
