--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,7 +17,7 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include ('partials/_header') %>
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -31,15 +30,14 @@
           </tr>
         </thead>
         <tbody>
-          <% for (let id in urls) { %>
+          <% urls.forEach(item => { %>
             <tr>
-              <td><%= id %></td>
-              <td><%= urls[id] %></td>
-              <td><%= id %></td>
-              <td><a class="nav-item nav-link" href="/urls/<%=id%>">Edit</a></td>
-              <td><form method="POST" action="/urls/9sm5xK/delete"><input type="submit" value="Delete"> </form></td>
+              <td><%= item.shortURL %></td>
+              <td><%= item.longURL %></td>
+              <td><a class="nav-item nav-link" href="/urls/<%= item.shortURL%>">Edit</a></td>
+              <td><form method="POST" action="/urls/<%= item.shortURL %>/delete"><input type="submit" value="Delete"> </form></td>
             </tr>
-          <% } %>
+          <% }) %>
         </tbody>
       </table>
     </main>
