--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <%- include ('partials/_header') %>
-  <main>
+  <%- include('partials/_header') %>
+  <main style="margin: 1em;">
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
