--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,10 +15,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <% if(userId){ %>
+        <% if(user){ %>
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <a class="nav-item nav-link" href="">Welcome, <%= userId %>!</a>
+        <a class="nav-item nav-link" href="/urls">Welcome, <%= user.email %>!</a>
         <form method="post" action="/logout">
           <label for="logout" style = "font-family: sans-serif; font-weight: 300; line-height: 2.5;color:#f9fafbf3; text-align: right;"><b></b></label>
           <button type="submit" style="background-color:transparent; font-family:sans-serif; color:#f9fafbf3; text-align: right" >Logout</button>
