--- a/views/reg_page.ejs
+++ b/views/reg_page.ejs
@@ -30,9 +30,10 @@
             class="form"
             type="email"
             name="email"
-            placeholder="Email Address"
+            placeholder="Email"
             style="width: 300px; margin: 1em"
           />
+          <label for="password">Please Enter Your Password:</label>
           <input
             class="form"
             type="password"
